--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.18",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "react": "^17.0.2",
     "socket.io": "^4.7.2"
   }
 }
